fixed overflow problem with midpart content

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ div.slider{
     flex-flow: column;
     position: relative;
     width: 100%;
-    height: 590px;
+    max-height: 590px;
 }
   img.slider-content {
     display: none;
@@ -104,30 +104,31 @@ div.slider{
   img.active-image{
       display: flex;
       align-self: center;
-      width: 80%;
+      width: 80%;   /*image is in 7:6*/
       height:100%;
+      z-index: 0;
       /*it's resizing with slider div which is full length and i want that*/
   }
   
 
   div.slider-ctrl-n-txt{
-
-      display: inline-flex;
-      flex-flow: row;
+    display: flex;
+    flex-flow: row;
       position: absolute;
       width: 100%;
       height: 100%;
+      z-index: 1;
   }
   div.slider-left-button{
       display: flex;
       flex-flow: row wrap;
-      justify-self: flex-start;
+      justify-self: end;
       align-items: center;
-      width: 20%;
+      width: 10%;
       height: 100%;
   }
   div.slider-right-button{
-      width: 20%;
+      width: 10%;
       height: 100%;
       display: flex;
       flex-flow: row wrap;
@@ -136,19 +137,20 @@ div.slider{
   }
 
   div.slider-midpart{
-      display: flex;
-      flex-flow: column wrap;
+     /*doesnt have to be flexbox, lemme try setting for children inline block*/
+/*if parent is flexbox, children lose flex positioning/alignment*/ 
+     width: 80%;
+      height: 590px;
   }
 
   div.slider-text{
-    justify-self: baseline;
-  }
+    display: inline-block;
+}
   div.slider-skip-buttons{
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row;
     justify-content: space-evenly;
-    justify-self: flex-end;
-    align-self: center;
+    margin: auto;
   }
 
   span.slider-button{
